HFP-357 Changes from feedback Added active li style. Fixed overflow of texts. Fixed paddings of texts. Corrected cancel buttons behaviour.

--- a/styles/cp-editor.css
+++ b/styles/cp-editor.css
@@ -187,12 +187,13 @@
   overflow: hidden;
   padding: 0.75em;
   margin: -0.75em;
-  padding-right: 3em;
+  padding-right: 4.5em;
   height: inherit;
   font-size: inherit;
   box-shadow: none;
   border: none;
   font-family: H5PDroidSans, sans-serif;
+  word-break: break-all;
 }
 .h5p-course-presentation .h5p-keywords-wrapper .h5p-current span {
   cursor: pointer;
